--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>LIFE</title>
 </head>
 <body>
+	<h1>ИГРА "ЖИЗНЬ"</h1>
 	<form id = "myform">
 		<b>Вероятность</b>
 		<select size = "1" id = "prob">
