--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
   <script type="text/javascript" src="js/script.js"></script>
-  <title>LIFE</title>
+  <title>Conway's Game of Life</title>
 </head>
 <body>
 	<h1>ИГРА "ЖИЗНЬ"</h1>
