--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<a href="https://github.com/feelosophy/Alien_Invasion"><img src="assets/img/portfolio/spaceShip.png" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/tbd.png" class="img-responsive"></a>
+				<a href="https://feelosophy.github.io/projects/game_life/"><img src="assets/img/portfolio/gameLifeIcon.png" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="#"><img src="assets/img/portfolio/tbd.png" class="img-responsive"></a>
@@ -94,16 +94,5 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@shopify/draggable@1.0.0-beta.7/lib/draggable.js"></script>
-	<script>
-
-        const draggable = new Draggable(document.querySelectorAll('ul'), {
-            draggable: 'li'
-        });
-
-        draggable.on('drag:start', () => console.log('drag:start'));
-        draggable.on('drag:move', () => console.log('drag:move'));
-        draggable.on('drag:stop', () => console.log('drag:stop'));
-	</script>
   </body>
 </html>
