--- a/projects/game_life/index.html
+++ b/projects/game_life/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="js/script.js"></script>
   <title>Conway's Game of Life</title>
 </head>
-<body>
+<a>
 	<h1>ИГРА "ЖИЗНЬ"</h1>
 	<form id = "myform">
 		<b>Вероятность</b>
@@ -21,5 +21,6 @@
 		<input type = "button" id = "start">
 	</form>
 	<canvas id = "mycanvas"></canvas>
+	<a href="https://github.com/feelosophy/feelosophy.github.io/tree/master/projects/game_life">Ссылка на github-проект</a>
 </body>
 </html>
