--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="col-lg-6 col-lg-offset-3">
 					<h4>HELLO PEOPLE, MY NICKNAME IS</h4>
 					<h1><b>feelosophy</b></h1>
-					<h4>Developer</h4>
+					<h4>I'm developer from Moscow</h4>
 				</div>
 			</div>
 	    </div>
