add telegram auth

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 					<h4>HELLO PEOPLE, MY NICKNAME IS</h4>
 					<h1><b>feelosophy</b></h1>
 					<h4>I'm developer from Moscow</h4>
+					<script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-login="superMega322Bot" data-size="small" data-auth-url="feelosophy.github.io" data-request-access="write"></script>
 				</div>
 			</div>
 	    </div>
 	</div>
-	
+
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
@@ -47,7 +48,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
@@ -76,7 +77,7 @@
 				<div class="col-lg-4">
 					<p>Template from <b>bayguzin.ru/main/shablonyi/web-dizajn-i-web-studii/instant.html</b></p>
 				</div>
-			
+
 				<div class="col-lg-4">
 					<p>Living in Moscow.</p>
 				</div>
