--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 					<h4>HELLO PEOPLE, MY NICKNAME IS</h4>
 					<h1><b>feelosophy</b></h1>
 					<h4>I'm developer from Moscow</h4>
-					<script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-login="superMega322Bot" data-size="small" data-auth-url="feelosophy.github.io" data-request-access="write"></script>
-				</div>
+					<script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-login="superMega322Bot" data-size="small" data-auth-url="https://feelosophy.github.io/" data-request-access="write"></script>				</div>
 			</div>
 	    </div>
 	</div>
