--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 					<h4>HELLO PEOPLE, MY NICKNAME IS</h4>
 					<h1><b>feelosophy</b></h1>
 					<h4>I'm developer from Moscow</h4>
-					<script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-login="superMega322Bot" data-size="small" data-auth-url="https://feelosophy.github.io/" data-request-access="write"></script>				</div>
+					<h4>I'm developer from Moscow</h4>
+					<script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-login="superMega322Bot" data-size="large" data-onauth="onTelegramAuth(user)"></script>
+					<script type="text/javascript">
+						function onTelegramAuth(user) {
+							alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+						}
+					</script>
 			</div>
 	    </div>
 	</div>
