add telegram auth

--- a/index.html
+++ b/index.html
@@ -80,11 +80,7 @@
 					<p>Living in Moscow.</p>
 				</div>
 				<div>
-					<script type="text/javascript">
-						function onTelegramAuth(user) {
-							alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
-						}
-					</script>
+					<script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-login="superMega322Bot" data-size="large" data-auth-url="https://feelosophy.github.io/"></script>
 				</div>
 				<div class="col-lg-4">
 					<p>easymp2@gmail.com</p>
