add telegram auth

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 					<script type="text/javascript">
 						function onTelegramAuth(user) {
 							alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+							console.log(user);
 						}
 					</script>
 				</div>
