--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 				<div class="col-lg-4">
 					<p>Living in Moscow.</p>
 				</div>
-				<div>
+				<div>	
+					<p>Test TG auth</p>
 					<script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-login="superMega322Bot" data-size="large" data-onauth="onTelegramAuth(user)"></script>
 					<script type="text/javascript">
 						function onTelegramAuth(user) {
