--- a/index.html
+++ b/index.html
@@ -92,10 +92,17 @@
 				<div class="col-lg-4">
 					<p>easymp2@gmail.com</p>
 				</div>
+				<div class="col-lg-4">
+					<a href="doc.pdf" download>Скачать резюме</a>
+				</div>
 			</div>
 		</div>
 	</div>
-
+	<script>
+	(function download() {
+	    document.getElementById('dl').click();
+	})()
+	</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
   </body>
