--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
 					<p>Living in Moscow.</p>
 				</div>
 				<div>	
-					<p>Test TG auth</p>
+<!-- 					<p>Test TG auth</p>
 					<script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-login="superMega322Bot" data-size="large" data-onauth="onTelegramAuth(user)"></script>
 					<script type="text/javascript">
 						function onTelegramAuth(user) {
 							alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
 							console.log(user);
 						}
-					</script>
+					</script> -->
 				</div>
 				<div class="col-lg-4">
 					<p>easymp2@gmail.com</p>
