--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<p>easymp2@gmail.com</p>
 				</div>
 				<div class="col-lg-4">
-					<a href="doc.pdf" download>Скачать резюме</a>
+					<a href="minaev_dd_resume.pdf" download>Скачать резюме</a>
 				</div>
 			</div>
 		</div>
