--- a/index.html
+++ b/index.html
@@ -93,15 +93,24 @@
 					<p>easymp2@gmail.com</p>
 				</div>
 				<div class="col-lg-4">
-					<a href="minaev_dd_resume.pdf" download>Скачать резюме</a>
+					<a id="downloadResume" href="minaev_dd_resume.pdf" download>Скачать резюме</a>
 				</div>
 			</div>
 		</div>
 	</div>
 	<script>
-	(function download() {
-	    document.getElementById('dl').click();
-	})()
+	function getParameterByName(name, url = window.location.href) {
+	    name = name.replace(/[\[\]]/g, '\\$&');
+	    var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+		results = regex.exec(url);
+	    if (!results) return null;
+	    if (!results[2]) return '';
+	    return decodeURIComponent(results[2].replace(/\+/g, ' '));
+	} 	
+
+	if (getParameterByName('downloadResume')) {
+		document.getElementById('downloadResume').click();
+	}
 	</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
